# Healthcare

./: add_constraints.sql  appointments.csv  cortex_analyst_streamlit.py  create_snowflake_objects.sql  create_tables.sql  load_data.sql  patients.csv  providers.csv  pyproject.toml  revenue_timeseries.yaml  schedule_templates.csv
