[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "healthcare"
version = "0.1.0"
description = "A healthcare analytics project"
authors = ["Your Name <saikumar.k@bridgehorn.com>"]
dependencies = [
    "pandas",
    "requests",
    "snowflake-connector-python",
    "streamlit"
]

[tool.streamlit]
server.port = 8501
